# vkpr

./: .gitignore  CMakeLists.txt
shaders/: gradient.comp  gradient_color.comp  rasterize_points.comp  resolve_render.comp
src/: CMakeLists.txt  main.cpp
src/common/: config.h  constants.h  vk_types.h
src/engine/: vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_images.cpp  vk_images.h  vk_initializers.cpp  vk_initializers.h  vk_loader.cpp  vk_pipelines.cpp  vk_pipelines.h
src/io/: points.cpp  points.h
src/ui/: camera.h  menu.cpp  menu.h  object_controls.cpp  object_controls.h
src/utils/: resource_management.cpp  resource_management.h
